// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do not write file with --write + formatted file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
formatted.js 0ms

`;

exports[`do not write file with --write + invalid file 1`] = `
=================================== (stderr) ===================================
[error] invalid.js: SyntaxError: Unexpected token, expected ";" (1:6)
[error] > 1 | this is invalid!
[error]     |      ^

=================================== (stdout) ===================================


`;

exports[`write file with --write + unformatted file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
unformatted.js 0ms

=================================== (write) ====================================
[{"filename":"unformatted.js","content":"var x = 1;\\n"}]
`;

exports[`write file with -w + unformatted file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
unformatted.js 0ms

=================================== (write) ====================================
[{"filename":"unformatted.js","content":"var x = 1;\\n"}]
`;
